<resources>
    <string name="_bb">_BB_(Def 1.828)</string>
    <string name="_bb_default">1.828</string>
    <string name="_bb_title">BB</string>
    <string name="_bg">_BG_(Def -0.914)</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="_bg_default">-0.914</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="_bg_title">BG</string>
    <string name="_br">_BR_(Def 0.093)</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="_br_default">0.093</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="_br_title">BR</string>
    <string name="_gb">_GB_(Def 0.085)</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mars_desc">Save photos &amp; videos to a private storage space in Google Photos on your device</string>
    <string name="about_mars_desc_2">You can find Locked Folder in Google Photos in the Library tab</string>
    <string name="about_mars_title">Hide sensitive photos &amp; videos</string>
    <string name="accessibility_amber_start">Start cinematic blur</string>
    <string name="accessibility_amber_stop">Stop cinematic blur</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="_gb_default">0.085</string>
    <string name="accessibility_back_to_video_description">Back to normal video mode</string>
    <string name="accessibility_cancel_button">Cancel photo</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="_gb_title">GB</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_social_share">Close social share</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_recording_time_description">Recording time %1$s</string>
    <string name="_gg">_GG_(Def 1.062)</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_record_speed_desc">Slow Motion %1$d/%2$d times speed</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_open_social_share">Open social share</string>
    <string name="_gg_default">1.062</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="_gg_title">GG</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speech_enhance_indicator">Speech enhancement on</string>
    <string name="_gr">_GR_(Def -0.148)</string>
    <string name="_gr_default">-0.148</string>
    <string name="_gr_title">GR</string>
    <string name="accessibility_take_catshark_portrait_button">Take Night Sight in Portrait</string>
    <string name="accessibility_take_lasagna_button">Take Motion mode photo</string>
    <string name="accessibility_take_nightsight_button">Take Night Sight photo</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_timelapse_auto_record_speed_desc">Time Lapse auto speed</string>
    <string name="_rb">_RB_(Def 0.257)</string>
    <string name="_rb_default">0.257</string>
    <string name="_rb_title">RB</string>
    <string name="_rg">_RG_(Def -0.937)</string>
    <string name="accessibility_video_mode_desc">Normal Video Mode</string>
    <string name="accessibility_video_output_length_description">Output video length %1$s</string>
    <string name="_rg_default">-0.937</string>
    <string name="_rg_title">RG</string>
    <string name="_rr">_RR_(Def 1.679)</string>
    <string name="_rr_default">1.679</string>
    <string name="_rr_title">RR</string>
    <string name="action_nightsight">Night Sight</string>
    <string name="action_photo">Photo</string>
    <string name="action_portrait">Portrait</string>
    <string name="action_title">Link Mode</string>
    <string name="addition_options_title">Additionally</string>
    <string name="advanced_fix">Fix</string>
    <string name="advanced_frames">Frames settings</string>
    <string name="advanced_option">Advanced Option</string>
    <string name="advanced_settings_extends_title">Extends Settings</string>
    <string name="aemode_auto">Auto</string>
    <string name="aemode_title">ISO/Exposure Time</string>
    <string name="af_off_median_acc_desc">Lock focus to median</string>
    <string name="af_off_median_desc">Median</string>
    <string name="agc_changelog_summary">Add changelogs of your XML</string>
    <string name="agc_changelog_title">Changelogs</string>
    <string name="agc_clear">Clear</string>
    <string name="agc_config_import_failed">Import XML failed. From file: %1$s.</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="agc_config_import_from">"Import config file form:
 %1$s"</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="agc_config_import_title">Import Config</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_infinity_acc_desc">Lock focus to infinity</string>
    <string name="af_off_infinity_desc">Infinity</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_option_desc">Auto</string>
    <string name="af_option_desc">Focus</string>
    <string name="agc_config_imported">The config is imported.</string>
    <string name="agc_config_imported_to">The config is imported to %1$s.</string>
    <string name="amber_description">Creates a cinematic effect by blurring the background behind your subject and records at 24 frames/sec</string>
    <string name="agc_config_load_btn_title">Load Configs</string>
    <string name="amber_move_closer">Move closer to the subject</string>
    <string name="amber_name">Cinematic Blur</string>
    <string name="amber_tap_on_subject_to_focus">Tap on a subject to focus</string>
    <string name="amethyst_description">More true to life with a wider range of colors, brightness, and contrast</string>
    <string name="amethyst_name">10-bit HDR</string>
    <string name="agc_config_load_summary">Configs that can be loaded in the Options window of main interface. The format should be .xml</string>
    <string name="agc_config_load_title">Import</string>
    <string name="apex_target_os_prefix">TD1</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aspect_ratio_desc">Ratio</string>
    <string name="astro_auto_acc_desc">Astrophotography Auto</string>
    <string name="astro_auto_desc">Auto</string>
    <string name="astro_desc">Astrophotography</string>
    <string name="astro_edu_image_content_description">Example photo of Astrophotography</string>
    <string name="astro_line_1">Place phone on a steady surface like a tripod or rock.</string>
    <string name="astro_line_2">The shutter will change from a moon to stars. Tap it.</string>
    <string name="astro_off_acc_desc">Astrophotography Off</string>
    <string name="astro_off_desc">Off</string>
    <string name="astro_option_desc">Astrophotography options</string>
    <string name="astro_photo_url">https://www.gstatic.com/aiux/gca/astro/astro_edu.jpg</string>
    <string name="agc_config_load_xml_summary">The format should be .xml or .agc</string>
    <string name="astrophotography_edu_title">Astrophotography</string>
    <string name="astrophotography_suggestion_text">Try Astrophotography</string>
    <string name="agc_config_load_xml_title">Load custom XML</string>
    <string name="agc_config_save_summary">Configs are stored in the /Download/AGC.%1$s/configs/ folder.</string>
    <string name="agc_config_save_title">Save</string>
    <string name="auto_pos_desc">Auto</string>
    <string name="auto_pos_desc_full">%d seconds Auto</string>
    <string name="autotimer_tutorial_body">Get in the shot and smile or make a funny face to get photos automatically. Tap the button to start.</string>
    <string name="autotimer_tutorial_title">Snap photos with a smile</string>
    <string name="agc_config_summary">Saving and loading configurations.</string>
    <string name="beta_label_text">Beta</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="agc_config_title">Configs</string>
    <string name="agc_debug_controls">Debug Controls</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="agc_delete">Delete</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brightness_ev_announcement">Brightness is now %1$s</string>
    <string name="brightness_knob_accessibility_description">Brightness knob</string>
    <string name="agc_disable">Disable</string>
    <string name="more_settings">More settings</string>
    <string name="options_menu_title">Options</string>
    <string name="settings_open_desc">Open settings</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="toolkit_config_tips">Install Toolkit to get more profiles</string>
</resources>